# evm_preflight

./: Cargo.toml  README.md
crates/preflight-api/: Cargo.toml
crates/preflight-api/src/: main.rs
crates/preflight-cli/: Cargo.toml
crates/preflight-cli/src/: main.rs
crates/preflight-risk/: Cargo.toml
crates/preflight-risk/src/: lib.rs
crates/preflight-sim/: Cargo.toml
crates/preflight-sim/src/: lib.rs
crates/preflight-sim/tests/: live_rpc.rs
crates/preflight-types/: Cargo.toml
crates/preflight-types/src/: lib.rs
docs/: web3-rust-onboarding.md
