[package]
name = "preflight-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
preflight-risk = { path = "../preflight-risk" }
preflight-sim = { path = "../preflight-sim" }
preflight-types = { path = "../preflight-types" }
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
