[package]
name = "preflight-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "evm-preflight"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
preflight-risk = { path = "../preflight-risk" }
preflight-sim = { path = "../preflight-sim" }
preflight-types = { path = "../preflight-types" }
serde_json.workspace = true
tokio.workspace = true
